--- a/style.css
+++ b/style.css
@@ -25,15 +25,15 @@ main {
 .calc {
   background-color: lightblue;
   padding: 20px;
-  width: 50%;
+  width: 40%;
   height: 90%;
   margin: auto;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr 1fr;
-      grid-template-columns: 1fr 1fr;
-  -ms-grid-rows: 1fr 8fr;
-      grid-template-rows: 1fr 8fr;
+  -ms-grid-columns: auto auto;
+      grid-template-columns: auto auto;
+  -ms-grid-rows: 1fr 4fr;
+      grid-template-rows: 1fr 4fr;
   gap: 20px;
 }
 
@@ -43,26 +43,23 @@ main {
   text-align: end;
   text-justify: center;
   margin-bottom: 20px;
-  -webkit-column-span: 1 / span 2fr;
-          column-span: 1 / span 2fr;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1 / span 2;
 }
 
 .calc__numbers {
   display: -ms-grid;
   display: grid;
-  gap: 20px;
-  width: 50%;
-  -ms-grid-columns: 1fr 1fr 1fr;
-      grid-template-columns: 1fr 1fr 1fr;
-  -ms-grid-rows: 1fr 1fr 1fr 1fr;
-      grid-template-rows: 1fr 1fr 1fr 1fr;
+  gap: 10px;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
 }
 
 .calc__operators {
   display: -ms-grid;
   display: grid;
-  gap: 20px;
-  width: 50%;
+  gap: 10px;
   -ms-grid-columns: 1fr 1fr 1fr;
       grid-template-columns: 1fr 1fr 1fr;
   -ms-grid-rows: 1fr 1fr 1fr 1fr;
