--- a/style.css
+++ b/style.css
@@ -23,46 +23,42 @@ main {
 }
 
 .calc {
+  border-radius: 10px;
   background-color: lightblue;
   padding: 20px;
-  width: 40%;
-  height: 90%;
+  width: 300px;
+  height: 400px;
   margin: auto;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: auto auto;
-      grid-template-columns: auto auto;
-  -ms-grid-rows: 1fr 4fr;
-      grid-template-rows: 1fr 4fr;
-  gap: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .calc__display {
   background-color: white;
   width: 100%;
+  height: 20%;
+  border-radius: 10px;
   text-align: end;
   text-justify: center;
   margin-bottom: 20px;
+}
+
+.calc__buttons {
+  display: -ms-grid;
+  display: grid;
+  gap: 10px;
+  -ms-grid-columns: (1fr)[4];
+      grid-template-columns: repeat(4, 1fr);
+}
+
+.calc__buttons #equals {
   -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
-  grid-column: 1 / span 2;
-}
-
-.calc__numbers {
-  display: -ms-grid;
-  display: grid;
-  gap: 10px;
-  -ms-grid-columns: (1fr)[3];
-      grid-template-columns: repeat(3, 1fr);
-}
-
-.calc__operators {
-  display: -ms-grid;
-  display: grid;
-  gap: 10px;
-  -ms-grid-columns: 1fr 1fr 1fr;
-      grid-template-columns: 1fr 1fr 1fr;
-  -ms-grid-rows: 1fr 1fr 1fr 1fr;
-      grid-template-rows: 1fr 1fr 1fr 1fr;
+  -ms-grid-column-span: 4;
+  grid-column: 1 / span 4;
 }
 /*# sourceMappingURL=style.css.map */
