--- a/style.scss
+++ b/style.scss
@@ -5,6 +5,7 @@
 
 button {
   border-radius: 10px;
+
   width: 100%;
   height: 100%;
   font-size: 45px;
@@ -19,36 +20,31 @@ main {
 }
 
 .calc {
+  border-radius: 10px;
   background-color: lightblue;
   padding: 20px;
-  width: 40%;
-  height: 90%;
+  width: 300px;
+  height: 400px;
   margin: auto;
-  display: grid;
-  grid-template-columns: auto auto;
-  grid-template-rows: 1fr 4fr;
-  gap: 20px;
+  display: flex;
+  flex-direction: column;
   &__display {
     background-color: white;
     width: 100%;
+    height: 20%;
+    border-radius: 10px;
     text-align: end;
     text-justify: center;
     margin-bottom: 20px;
-    grid-column: 1 / span 2;
   }
-  &__numbers {
+
+  &__buttons {
     display: grid;
     gap: 10px;
+    grid-template-columns: repeat(4, 1fr);
 
-    grid-template-columns: repeat(3, 1fr);
-    // grid-template-columns: 1fr 1fr 1fr;
-    // grid-template-rows: 1fr 1fr 1fr 1fr;
-  }
-  &__operators {
-    display: grid;
-    gap: 10px;
-
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
+    #equals {
+      grid-column: 1 / span 4;
+    }
   }
 }
