--- a/style.css
+++ b/style.css
@@ -46,6 +46,13 @@ main {
   text-align: end;
   text-justify: center;
   margin-bottom: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .calc__buttons {
