--- a/style.css
+++ b/style.css
@@ -2,13 +2,17 @@
   margin: 0;
   padding: 0;
   font-family: "Courier New", Courier, monospace;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
-button {
-  border-radius: 10px;
-  width: 100%;
-  height: 100%;
-  font-size: 45px;
+@font-face {
+  font-family: "Pixel";
+  src: url("./assets/Pixel LCD-7.ttf");
+}
+
+body {
+  background-color: #00d4ff;
 }
 
 main {
@@ -16,19 +20,22 @@ main {
   display: -ms-flexbox;
   display: flex;
   width: 100%;
-  height: 100vh;
-  background-color: red;
+  height: 95vh;
+  background: #ab3c6e;
+  background: -webkit-gradient(linear, left top, left bottom, from(#ff9ee2), to(#00d4ff));
+  background: linear-gradient(180deg, #ff9ee2 0%, #00d4ff 100%);
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
 }
 
 .calc {
-  border-radius: 10px;
-  background-color: lightblue;
+  border-right: 25px outset #b4c2cc;
+  border-radius: 30px;
+  background-color: #d3e6e7;
   padding: 20px;
-  width: 400px;
-  height: 500px;
+  width: calc(100vw - 10px);
+  height: 90%;
   margin: auto;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -39,12 +46,26 @@ main {
           flex-direction: column;
 }
 
+.calc__name {
+  color: #f16565;
+  font-size: 28px;
+  font-weight: bold;
+  margin: 8px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
 .calc__display {
-  background-color: white;
+  background-color: #eee3e3;
+  border-left: 12px inset #b4c2cc;
+  border-top: 12px inset #b4c2cc;
   width: 100%;
   height: 20%;
-  border-radius: 10px;
-  text-align: end;
+  border-radius: 30px;
   margin-bottom: 20px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -53,18 +74,36 @@ main {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: end;
 }
 
-.calc__display .disp_1,
-.calc__display .disp_2 {
+.calc__display p {
+  padding: 10px;
+  color: #524d4b;
+  font-family: "Pixel";
+}
+
+.calc__display .disp_1 {
+  color: #867d7a;
   font-size: 28px;
 }
 
+.calc__display .disp_2 {
+  color: #524d4b;
+  font-size: 38px;
+}
+
 .calc__display .disp_3 {
+  color: #524d4b;
   font-size: 48px;
 }
 
 .calc__buttons {
+  -webkit-box-flex: 2;
+      -ms-flex-positive: 2;
+          flex-grow: 2;
   display: -ms-grid;
   display: grid;
   gap: 10px;
@@ -72,9 +111,80 @@ main {
       grid-template-columns: repeat(4, 1fr);
 }
 
+.calc__buttons .number {
+  border-radius: 30px;
+  border-right: 12px outset #b4c2cc;
+  width: 100%;
+  height: 100%;
+  font-size: 30px;
+  background-color: #a9bcc2;
+  color: #eee3e3;
+}
+
+.calc__buttons .operand {
+  border-radius: 30px;
+  border-right: 12px outset #b4c2cc;
+  width: 100%;
+  height: 100%;
+  font-size: 30px;
+  background-color: #a6e6a6;
+  color: #eee3e3;
+}
+
+.calc__buttons .clear-all {
+  border-radius: 30px;
+  border-right: 12px outset #b4c2cc;
+  width: 100%;
+  height: 100%;
+  font-size: 30px;
+  background-color: #f16565;
+  color: #eee3e3;
+}
+
+.calc__buttons .clear-last {
+  border-radius: 30px;
+  border-right: 12px outset #b4c2cc;
+  width: 100%;
+  height: 100%;
+  font-size: 30px;
+  background-color: #faad1d;
+  color: #eee3e3;
+}
+
 .calc__buttons #equals {
   -ms-grid-column: 1;
   -ms-grid-column-span: 4;
   grid-column: 1 / span 4;
+  border-radius: 30px;
+  border-right: 12px outset #b4c2cc;
+  width: 100%;
+  height: 100%;
+  font-size: 30px;
+  background-color: #f797a7;
+  color: #eee3e3;
+}
+
+footer {
+  padding: 1rem;
+  height: 5vh;
+}
+
+footer span {
+  color: #eee3e3;
+  font-size: 28px;
+}
+
+@media screen and (min-width: 550px) {
+  .calc {
+    width: 550px;
+    height: 70vh;
+  }
+  .calc__buttons .number,
+  .calc__buttons .operand,
+  .calc__buttons .clear-all,
+  .calc__buttons .clear-last,
+  .calc__buttons #equals {
+    font-size: 45px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
