--- a/style.scss
+++ b/style.scss
@@ -1,60 +1,130 @@
+@use "vars";
+@use "mixins";
+
 * {
   margin: 0;
   padding: 0;
   font-family: "Courier New", Courier, monospace;
+  box-sizing: border-box;
+}
+@font-face {
+  font-family: "Pixel";
+  src: url("./assets/Pixel\ LCD-7.ttf");
 }
 
-button {
-  border-radius: 10px;
-
-  width: 100%;
-  height: 100%;
-  font-size: 45px;
+body {
+  background-color: #00d4ff;
 }
 
 main {
   display: flex;
   width: 100%;
-  height: 100vh;
-  background-color: red;
+  height: 95vh;
+  background: rgb(171, 60, 110);
+  background: linear-gradient(180deg, #ff9ee2 0%, #00d4ff 100%);
   justify-content: center;
 }
 
 .calc {
-  border-radius: 10px;
-  background-color: lightblue;
+  border-right: 25px outset $border-colour;
+  border-radius: $border-rad;
+  background-color: $calc-body-colour;
   padding: 20px;
-  width: 400px;
-  height: 500px;
+  width: calc(100vw - 10px);
+  height: 90%;
   margin: auto;
   display: flex;
   flex-direction: column;
+
+  &__name {
+    color: $clear-all-button;
+    font-size: 28px;
+    font-weight: bold;
+    margin: 8px;
+    display: flex;
+    justify-content: space-between;
+  }
+
   &__display {
-    background-color: white;
+    background-color: $button-colour-white;
+    border-left: 12px inset $border-colour;
+    border-top: 12px inset $border-colour;
     width: 100%;
     height: 20%;
-    border-radius: 10px;
-    text-align: end;
+    border-radius: $border-rad;
     margin-bottom: 20px;
     display: flex;
     flex-direction: column;
+    align-items: end;
 
-    .disp_1,
-    .disp_2 {
+    p {
+      padding: 10px;
+      color: $display-colour;
+      font-family: $display-font;
+    }
+    .disp_1 {
+      color: $display-colour-light;
       font-size: 28px;
     }
+    .disp_2 {
+      color: $display-colour;
+      font-size: 38px;
+    }
+
     .disp_3 {
+      color: $display-colour;
       font-size: 48px;
     }
   }
 
   &__buttons {
+    flex-grow: 2;
     display: grid;
     gap: 10px;
     grid-template-columns: repeat(4, 1fr);
 
+    .number {
+      @include buttonStyle($number-colour);
+    }
+    .operand {
+      @include buttonStyle($operator-colour);
+    }
+    .clear-all {
+      @include buttonStyle($clear-all-button);
+    }
+    .clear-last {
+      @include buttonStyle($clear-last-button);
+    }
+
     #equals {
       grid-column: 1 / span 4;
+      @include buttonStyle($equals-colour);
+    }
+  }
+}
+
+footer {
+  padding: 1rem;
+  height: 5vh;
+  span {
+    color: $button-colour-white;
+    font-size: 28px;
+  }
+}
+
+@media screen and (min-width: 550px) {
+  .calc {
+    width: 550px;
+    height: 70vh;
+
+    &__buttons {
+      .number,
+      .operand,
+      .clear-all,
+      .clear-last,
+      #equals {
+        font-size: 45px;
+      }
     }
   }
 }
